[package]
name = "ethereum-tarpc-api"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
ethereum = { git = "https://github.com/rust-blockchain/ethereum", branch = "vorot93/dev", default-features = false, features = ["with-serde"] }
ethereum-types = { git = "https://github.com/paritytech/parity-common" }
serde = { version = "1", features = ["derive"] }
tarpc = "0.24"
