[package]
name = "ethereum-tarpc-api"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
ethereum = { version = "0.7", default-features = false, features = ["with-serde"] }
ethereum-types = "0.11"
serde = { version = "1", features = ["derive"] }
tarpc = "0.24"
